--- a/WODWhacker/AndroidManifest.xml
+++ b/WODWhacker/AndroidManifest.xml
@@ -5,6 +5,7 @@
       android:versionName="1.0">
       
       <uses-permission android:name="android.permission.INTERNET" />
+      <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
       
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WorkoutEditor"
@@ -25,6 +26,15 @@
 			</intent-filter>
 		</activity>
 		
+				<activity
+			android:name=".SignInActivity"
+			android:label="@string/snaptic_sign_in_title">
+			
+			<intent-filter>
+				<action android:name="com.snaptic.WODWhacker.intent.action.SIGN_IN" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
     </application>
 
 
