--- a/WODWhacker/AndroidManifest.xml
+++ b/WODWhacker/AndroidManifest.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.snaptic.WODWhacker"
-      android:versionCode="1"
+      android:versionCode="2"
       android:versionName="1.0">
       
-      <uses-permission android:name="android.permission.INTERNET" />
-      <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-      
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+	<uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />
+	
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".WorkoutEditor"
                   android:label="@string/app_name">
@@ -26,7 +32,7 @@
 			</intent-filter>
 		</activity>
 		
-				<activity
+		<activity
 			android:name=".SignInActivity"
 			android:label="@string/snaptic_sign_in_title">
 			
@@ -35,6 +41,18 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
+		
+				<receiver
+			android:name=".InitializeReminders"
+			android:process=":initializeReminders">
+			
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+			</intent-filter>
+		</receiver>
+	
+	    <service android:name="com.snaptic.WODWhacker.AutoUpdate" />
+	    	
     </application>
 
 
